syntax = "proto3";

option csharp_namespace = "Booking.API.GrpcClient.Protos";

service RoomGrpcService{
	rpc GetRoomById (GetRoomByIdRequest) returns (GetRoomByIdResponse);
}

message GetRoomByIdRequest{
	int32 Id = 1;
}
message GetRoomByIdResponse{
	int32 Result = 2;
}
