syntax = "proto3";

option csharp_namespace = "Booking.API.GrpcClient.Protos";

service TourGrpcService{
	rpc GetTourById (GetTourByIdRequest) returns (GetTourByIdResponse);
}
message GetTourByIdRequest{
	int32 id = 1;
}
message GetTourByIdResponse{
	int32 result = 1;
}